test case changes